adding calculator files

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+.calculator button{
+width: 75px;
+height: 75px;
+border: none;
+font-size: 25px;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+.calculator button:hover{
+    background-color: gray;
+    color: white;
+}
+.calculator{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 300px;
+    border: 2px solid black;
+}
+.calculator input{
+    width:100%;
+    height: 75px;
+    text-align: right;
+    font-size: 50px;
+    border: none;
+    border-bottom: 3px solid black;
+    
 }
